@@ -1,5 +1,6 @@
 Revision history for Data::CloudWeights
 
+         - Updated inc::Bob. Added inc::CPANTesting
          - Added more tests
          - Updated inc::Bob
 
